--- a/src/app/navigation/header/header.component.html
+++ b/src/app/navigation/header/header.component.html
@@ -5,7 +5,7 @@
     </button>
   </div>
   <div>
-    <a routerLink="/">LOGO</a>
+    <a routerLink="/">Fitness Tracker</a>
   </div>
   <div fxFlex fxLayout fxLayoutAlign="flex-end" fxHide.xs>
     <ul fxLayout fxLayoutGap="10px" class="navigation-items">
@@ -18,7 +18,7 @@
       <li *ngIf="isAuth">
         <a routerLink="/training">Training</a>
       </li>
-      <li *ngIf="isAuth">
+      <li style="cursor: pointer" (click)="onLogout()" *ngIf="isAuth">
         <a>Logout</a>
       </li>
     </ul>
